--- a/sources/ILSpyVisualizer/AssemblyBrowser/AssemblyBrowserWindow.xaml
+++ b/sources/ILSpyVisualizer/AssemblyBrowser/AssemblyBrowserWindow.xaml
@@ -1,112 +1,37 @@
 ﻿<Window x:Class="ILSpyVisualizer.AssemblyBrowser.AssemblyBrowserWindow"
         x:ClassModifier="internal"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
-        xmlns:AssemblyBrowser="clr-namespace:ILSpyVisualizer.AssemblyBrowser" 
-        Title="{Binding Title}" 
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:zoom="clr-namespace:WPFExtensions.Controls;assembly=WPFExtensions" 
+        xmlns:AssemblyBrowser="clr-namespace:ILSpyVisualizer.AssemblyBrowser" Title="{Binding Title}" 
         Height="600" 
         Width="800"
-        AllowDrop="True"
+        AllowDrop="{Binding IsInSearchView}"
         Drop="WindowDrop">
     <Window.Resources>
-        <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="DataTemplatesDictionary.xaml"/>
+                <ResourceDictionary Source="ControlStylesDictionary.xaml"/>
+            </ResourceDictionary.MergedDictionaries> 
+            
+            <Style x:Key="InvisibleInGraphViewStyle" TargetType="{x:Type FrameworkElement}">
+                <Style.Triggers>
+                    <DataTrigger Binding="{Binding ShowGraph}" Value="True">
+                        <Setter Property="Visibility" Value="Collapsed"/>
+                    </DataTrigger>
+                </Style.Triggers>
+            </Style>
 
-        <Style x:Key="ViewModeRadioButtonStyle" TargetType="{x:Type RadioButton}">
-            <Setter Property="TextBlock.FontSize" Value="12"/>
-            <Setter Property="TextBlock.Foreground" Value="#666666"/>  
-            <Setter Property="Margin" Value="4"/>
-        </Style>
-
-        <DataTemplate DataType="{x:Type AssemblyBrowser:MemberViewModel}">
-            <Grid Margin="0, 2">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition />
-                </Grid.ColumnDefinitions>
-                <Image Source="{Binding Icon}"
-                       Margin="0, 0, 6, 0"                    
-                       Stretch="Uniform"
-                       Width="16"
-                       Height="16"                       
-                       />
-                <TextBlock Text="{Binding Text}"
-                           Grid.Column="1" />
-            </Grid>
-        </DataTemplate>
-
-        <DataTemplate DataType="{x:Type AssemblyBrowser:TypeViewModel}">
-            <DataTemplate.Resources>
-                <Style x:Key="TypeNameTextBlockStyle" TargetType="{x:Type TextBlock}">
-                    <Setter Property="Text" Value="{Binding Name}"/>
-                    <Setter Property="ToolTip" Value="{Binding FullName}"/>
-                    <Setter Property="HorizontalAlignment" Value="Center"/>
-                    <Setter Property="Margin" Value="8, 5, 8, 3"/>
-                    <Setter Property="FontWeight" Value="Bold"/>
-                </Style>
-                <Style x:Key="BorderStyle" TargetType="{x:Type Border}">
-                    <Setter Property="CornerRadius" Value="10"/>
-                    <Setter Property="BorderThickness" Value="1"/>
-                    <Setter Property="BorderBrush" Value="Black"/>
-                    <Setter Property="Margin" Value="8"/>
-                    <Setter Property="SnapsToDevicePixels" Value="True"/>
-                </Style>
-            </DataTemplate.Resources>
-
-            <Grid HorizontalAlignment="Left"
-                  Margin="5">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition />
-                </Grid.RowDefinitions>
-                <Grid HorizontalAlignment="Center">
-                    <Border Style="{StaticResource BorderStyle}"
-                            MouseLeftButtonDown="TypeMouseLeftButtonDown"
-                            Background="Transparent"
-                            Cursor="Hand">
-                        <Grid>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="Auto"/>
-                                <RowDefinition/>
-                            </Grid.RowDefinitions>
-                            <Border x:Name="brdDivider" BorderThickness="0, 0, 0, 1"
-                                SnapsToDevicePixels="True"
-                                BorderBrush="Black">
-                                <TextBlock Style="{StaticResource TypeNameTextBlockStyle}"/>
-                            </Border>
-                            <ItemsControl x:Name="icMembers"
-                                    ItemsSource="{Binding Members}"
-                                      Grid.Row="1"
-                                      Margin="5" />
-                        </Grid>
-                    </Border>
-                    <Border Style="{StaticResource BorderStyle}">
-                        <Border.Effect>
-                            <DropShadowEffect/>
-                        </Border.Effect>
-                    </Border>
-                </Grid>
-                <ItemsControl x:Name="icDerivedTypes"
-                              ItemsSource="{Binding DerivedTypes}"
-                              Grid.Row="1"
-                              >
-                    <ItemsControl.ItemsPanel>
-                        <ItemsPanelTemplate>
-                            <StackPanel Orientation="Horizontal"/>
-                        </ItemsPanelTemplate>
-                    </ItemsControl.ItemsPanel>
-                </ItemsControl>
-            </Grid>
-
-            <DataTemplate.Triggers>
-                <DataTrigger Binding="{Binding ShowMembers}" Value="False">
-                    <Setter TargetName="icMembers" Property="Visibility" Value="Collapsed"/>
-                    <Setter TargetName="brdDivider" Property="BorderThickness" Value="0"/>
-                </DataTrigger>
-                <DataTrigger Binding="{Binding ShowDerivedTypes}" Value="False">
-                    <Setter TargetName="icDerivedTypes" Property="Visibility" Value="Collapsed"/>
-                </DataTrigger>
-            </DataTemplate.Triggers>
-        </DataTemplate>
+            <Style x:Key="InvisibleInSearchViewStyle" TargetType="{x:Type FrameworkElement}">
+                <Style.Triggers>
+                    <DataTrigger Binding="{Binding IsInSearchView}" Value="True">
+                        <Setter Property="Visibility" Value="Collapsed"/>
+                    </DataTrigger>
+                </Style.Triggers>
+            </Style>
+            
+        </ResourceDictionary>
     </Window.Resources>
     <Window.CommandBindings>
         <CommandBinding Command="Search" Executed="SearchExecuted"/>
@@ -117,6 +42,8 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
+        
+        <!--Header-->
         <Grid>
             <Grid>
                 <Grid.ColumnDefinitions>
@@ -125,18 +52,14 @@
                     <ColumnDefinition Width="Auto"/>
                 </Grid.ColumnDefinitions>
 
-                <StackPanel HorizontalAlignment="Left"
-                            Margin="4, 6">
-                    <RadioButton GroupName="ViewMode" 
-                             Content="Type Hierarchies" 
-                             IsChecked="{Binding ShowTypeHierarchies}"
-                             Style="{StaticResource ViewModeRadioButtonStyle}"/>
-                    <RadioButton GroupName="ViewMode" 
-                             Content="Single Types" 
-                             IsChecked="{Binding ShowSingleTypes}"
-                             Style="{StaticResource ViewModeRadioButtonStyle}"/>
-                </StackPanel>
-
+                <TextBlock Style="{StaticResource InvisibleInSearchViewStyle}"
+                           Margin="10"
+                           VerticalAlignment="Top">
+                    <Hyperlink Command="{Binding NavigateToSearchViewCommand}">  
+                        <TextBlock Text="Back to search results"/>                                   
+                    </Hyperlink>                    
+                </TextBlock>
+                
                 <ItemsControl Grid.Column="1"
                               ItemsSource="{Binding Assemblies}"
                               Margin="10">
@@ -145,50 +68,6 @@
                             <WrapPanel Orientation="Horizontal"/>
                         </ItemsPanelTemplate>
                     </ItemsControl.ItemsPanel>
-                    <ItemsControl.ItemTemplate>
-                        <DataTemplate>
-                            <Grid Margin="3">
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition/>
-                                    <ColumnDefinition Width="Auto"/>
-                                </Grid.ColumnDefinitions>
-                                <TextBlock Text="{Binding Name}"
-                                           FontSize="13"
-                                           Foreground="#555555"
-                                           FontWeight="DemiBold"/>
-                                <Button x:Name="btnRemove"
-                                        Command="{Binding RemoveCommand}"
-                                        Grid.Column="1"                                        
-                                        MinWidth="16"
-                                        VerticalAlignment="Center"
-                                        Opacity="0.3"
-                                        Margin="0, 3, 0, 0">
-                                    <Button.Template>
-                                        <ControlTemplate>
-                                            <Border Background="Transparent">
-                                                <Path Stretch="Fill" 
-                                                      StrokeThickness="0.5" 
-                                                      Stroke="#FF333333" 
-                                                      Fill="#FF969696" 
-                                                      Data="F1 M 0,1.3333L 1.33333,0L 4,2.6666L 6.6666,0 8,1.3333L 5.3333,4L 8,6.6666L 6.6666,8L 4,5.3333L 1.3333,8L 0,6.6666L 2.6666,4L 0,1.3333 Z " 
-                                                      HorizontalAlignment="Stretch" 
-                                                      VerticalAlignment="Stretch"
-                                                      Height="10"
-                                                      Width="10"
-                                                      Margin="5, 0"/>
-                                            </Border>
-                                        </ControlTemplate>
-                                    </Button.Template>
-                                </Button>
-
-                            </Grid>
-                            <DataTemplate.Triggers>
-                                <Trigger SourceName="btnRemove" Property="IsMouseOver" Value="True">
-                                    <Setter TargetName="btnRemove" Property="Opacity" Value="1"/>
-                                </Trigger>
-                            </DataTemplate.Triggers>
-                        </DataTemplate>
-                    </ItemsControl.ItemTemplate>
                 </ItemsControl>
 
                 <TextBox x:Name="txtSearch"
@@ -199,7 +78,8 @@
                          Margin="10"
                          Grid.Column="2">
                     <TextBox.Style>
-                        <Style TargetType="{x:Type TextBox}">
+                        <Style TargetType="{x:Type TextBox}" 
+                               BasedOn="{StaticResource InvisibleInGraphViewStyle}">
                             <Style.Triggers>
                                 <DataTrigger Binding="{Binding IsSearchPerformed}" Value="False">
                                     <Setter Property="BorderBrush" Value="#4db74a"/>
@@ -209,54 +89,44 @@
                     </TextBox.Style>
                 </TextBox>
             </Grid>
+        </Grid>  
 
-
-        </Grid>
-
+        <!--Content-->
         <Grid Grid.Row="1">
-
-            <ItemsControl ItemsSource="{Binding Types}"
-                              Visibility="{Binding ShowTypeHierarchies, Converter={StaticResource BooleanToVisibilityConverter}}">
-                <ItemsControl.Template>
-                    <ControlTemplate TargetType="{x:Type ItemsControl}">
-                        <ScrollViewer CanContentScroll="True"
-                                      HorizontalScrollBarVisibility="Auto">
-                            <VirtualizingStackPanel IsItemsHost="True"                                                     
-                                                    VirtualizingStackPanel.VirtualizationMode="Recycling"/>
-                        </ScrollViewer>
-                    </ControlTemplate>
-                </ItemsControl.Template>
-                <ItemsControl.ItemTemplate>
-                    <DataTemplate>
-                        <Grid>
-                            <Border BorderThickness="0, 0, 0, 1"
-                                        BorderBrush="Black">
-                                <ContentControl Content="{Binding}"
-                                                    Margin="10, 15"/>
-                            </Border>
-                            <Border BorderThickness="0, 0, 0, 1"
-                                        BorderBrush="Black">
-                                <Border.Effect>
-                                    <DropShadowEffect/>
-                                </Border.Effect>
-                            </Border>
-                        </Grid>
-                    </DataTemplate>
-                </ItemsControl.ItemTemplate>
-            </ItemsControl>
-
-            <ScrollViewer VerticalScrollBarVisibility="Auto"
+            
+            <!--Search results-->
+            <ScrollViewer VerticalScrollBarVisibility="Auto" 
                           HorizontalScrollBarVisibility="Disabled"
-                          Visibility="{Binding ShowSingleTypes, Converter={StaticResource BooleanToVisibilityConverter}}">
+                          Style="{StaticResource InvisibleInGraphViewStyle}">
                 <ItemsControl ItemsSource="{Binding Types}"
-                              Grid.Row="1">
+                          ItemTemplate="{StaticResource TypeDataTemplate}">
                     <ItemsControl.ItemsPanel>
                         <ItemsPanelTemplate>
-                            <WrapPanel Orientation="Horizontal" />
+                            <WrapPanel Orientation="Horizontal"/>
                         </ItemsPanelTemplate>
                     </ItemsControl.ItemsPanel>
-                </ItemsControl>
+                    <ItemsControl.ItemContainerStyle>
+                        <Style TargetType="{x:Type ContentPresenter}">
+                            <Setter Property="Margin" Value="8"/>
+                        </Style>
+                    </ItemsControl.ItemContainerStyle>
+                </ItemsControl>                
             </ScrollViewer>
+            
+            <!--Graph-->
+            <zoom:ZoomControl x:Name="zoomControl"
+                              Grid.Row="1"  
+                              Zoom="0.2"
+                              ZoomBoxOpacity="0.5"
+                              Style="{StaticResource InvisibleInSearchViewStyle}">
+                <AssemblyBrowser:TypeGraphLayout x:Name="graphLayout" 
+                                                     Margin="10"
+                                                     Graph="{Binding Graph}"
+                                                     LayoutAlgorithmType="LinLog"
+                                                     OverlapRemovalAlgorithmType="FSA"
+                                                     HighlightAlgorithmType="Simple" />
+                
+            </zoom:ZoomControl>
         </Grid>
     </Grid>
 </Window>
